@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* babenko: Some recent fix in portal destruction requires masters to be updated via snapshot.
 * savrus: Moved tablet manager config to dynamic configs. Update masters via snapshot.
 * ermolovd: Enabled null type in schema. Update masters via snapshot.
 * savrus: Allowed to change tablet cell bundle options on fly in 42a67269eb. Update masters via snapshot.
